# ricecomp

./: .gitignore  Cargo.toml  LICENSE  README.md
c_example/: ricecomp.c  test.c
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs  fuzz_target_byte.rs  fuzz_target_int.rs  fuzz_target_short.rs
src/: lib.rs  read.rs  write.rs
