[package]
name = "ricecomp"
version = "0.1.0"
edition = "2021"
description = "Rice Compression Algorithm from CFITSIO"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arbitrary = { version = "1", optional = true, features = ["derive"] }
