[package]
name = "ricecomp"
version = "0.3.0"
edition = "2021"
repository = "https://github.com/petesmc/ricecomp.git"
description = "Rice Compression Algorithm"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arbitrary = { version = "1", optional = true, features = ["derive"] }
